- `REPL View`: Better handling of cursor movement in output area of REPL. Fix Issue #529
  - You can use arrow keys, copy keys in the REPL output area
  - You can use Tab key to switch to the REPL input area
- `REPL View` accepts the Drawbridge protocol, thus allowing `http(s)://<server>:<port>/repl` or `http(s)://<user>:<password>@<server>:<port>/repl` URLs. Fix Issue #501
- `Outline View`: There were unexpected exceptions thrown depending on the content of the Editor. These were due to `java.lang.Comparator` contract violations. Fix Issue #639
- `Editor`: In strict/paredit mode, forward/backward delete do not prevent to remove `#` in front of `()` or `{}` or `""`. Also, fixed a bug where forward delete allowed to remove `(` or `{` or `"` if there was a leading `#`. Fix Issue #523 
  - Also changed a behavior: the cursor is not stuck, either something is deleted, either the cursors moves forward or backward

== Changes between Counterclockwise 0.25.1 and 0.25.2

`0.25.2` released on May 17, 2014

=== Bug fixes

- Upgraded dependency on `ccw.server 0.1.1` which is where the fix for Code Completion not succeeding sometimes is located!

== Changes between Counterclockwise 0.25.0 and 0.25.1

`0.25.1` released on May 17, 2014

=== Explicitly running leiningen headless
When Preference `Clojure` > `General` > `Launch Leiningen projects with Leiningen` is unchecked, then `Run as` for the project will use the Eclipse Project Settings, not the Leiningen project settings. And Leiningen will not be used to launch the project. +
But still, users have reported that there is a need for a command for explicitly launching the project via Leiningen.

Thus the "Headless Leiningen REPL" command has been resurrected. You can find it in the Leiningen contextual menu, or invoke it via the kbd:[Alt+L H] Keyboard Shortcut.

=== Bug fixes

- Error on load file in REPL, due to spaces in path introduced in 0.25.0. Thank you alzadude for the Pull Request!